--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,22 @@
 # Site settings
-title: Lorem Ipsum - Web Developer
-description: "A blog about lorem ipsum ..."
-baseurl: "/space-jekyll-template" # for test: remove string '/space-jekyll-template' to ''
-url: "http://victorvoid.github.io/space-jekyll-template/" # for test: remove string 'http://victorvoid.github.io' to '' but in production: 'https://yourusername.githu.io'
+title: Nick Walsh
+description: "Nick Walsh's personal site"
+#baseurl: "/jekyll-personal-site" # for test: remove string '/space-jekyll-template' to ''
+baseurl: ''
+#url: "http://nmwalsh.github.io/jekyll-personal-site/" # for test: remove string 'http://victorvoid.github.io' to '' but in production: 'https://yourusername.githu.io'
+url: ''
 
 # User settings
-username: lorem ipsum
-user_title: Lorem Ipsum - FrontEnd
-email: lorem.lorem@ipsum.com
-twitter_username: loremipsum
-github_username:  loremipsum
-gplus_username:  loremipsum
-linkedin_public_url: loremipsum # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
-disqus_username: loremipsum
-profile_picture: https://68.media.tumblr.com/93f384858e9273d5b980b418e2f2f4d5/tumblr_o5i2aybLJG1uapsfmo2_250.png
+username: nick walsh
+user_title: Developer Evangelist, @Datmo
+email: nicholaswalsh.official@gmail.com
+twitter_username: thenickwalsh
+github_username:  nmwalsh
+#gplus_username:  loremipsum
+linkedin_public_url: thenickwalsh
+#disqus_username: loremipsum
+#profile_picture: https://68.media.tumblr.com/93f384858e9273d5b980b418e2f2f4d5/tumblr_o5i2aybLJG1uapsfmo2_250.png
+profile_picture: /assets/img/tomcruise.png
 
 # Build settings
 markdown: kramdown
