Change avatar from tom cruise to my caricature

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ email: nicholaswalsh.official@gmail.com
 twitter_username: thenickwalsh
 github_username:  nmwalsh
 medium_username: nicholasmwalsh
-profile_picture: /assets/img/tomcruise.png
+profile_picture: /assets/img/avatar.jpg
 linkedin_public_url: thenickwalsh
 
 # Build settings
