Changes to about page content

--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ links:
       url: https://www.medium.com/@nicholasmwalsh
       key_trigger: m
     - title: linkedin
-      url: https://www.linkedin.com/thenickwalsh
+      url: https://www.linkedin.com/in/thenickwalsh
       key_trigger: l
     - title: slides
       url: https://www.slides.com/walsh
